# baseball-logic-kit

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: FetchDoctest.cmake
src/: GameState.h  RNG.h  Rules.cpp  Rules.h  main.cpp
tests/: test_rules.cpp
